--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="PREF_HOSTNAME">pref_hostname</string>
+    <string name="PREF_PORT">pref_port</string>
+    <string name="PREF_OBJECTS">pref_objects</string>
 
 </resources>
